Sutter Health/src/objects/Medical_Plan__c.object
<CustomObject>
    <description>This object is created for SCN and develop Req -3268
 It split into three parts
1.Sold case Notifaction
2. Medical Plan
3.Non standard medical plan</description>
    <fields>
        <fullName>AcupunctureChiropractic_Other__c</fullName>
        <description>This field will display when user select  &quot;Acupuncture/Chiropractic&quot; in picklist and value is &quot;Other&quot;.</description>
        <label>Acu/Chiro Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acupuncture_Chiropractic__c</fullName>
        <label>Acupuncture/Chiropractic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XA01</fullName>
                </value>
                <value>
                    <fullName>XA02</fullName>
                </value>
                <value>
                    <fullName>XA03</fullName>
                </value>
                <value>
                    <fullName>XA04</fullName>
                </value>
                <value>
                    <fullName>XA05</fullName>
                </value>
                <value>
                    <fullName>XA06</fullName>
                </value>
                <value>
                    <fullName>XA07</fullName>
                </value>
                <value>
                    <fullName>XA08</fullName>
                </value>
                <value>
                    <fullName>XA09</fullName>
                </value>
                <value>
                    <fullName>XA10</fullName>
                </value>
                <value>
                    <fullName>XA11</fullName>
                </value>
                <value>
                    <fullName>XA12</fullName>
                </value>
                <value>
                    <fullName>XA13</fullName>
                </value>
                <value>
                    <fullName>XA14</fullName>
                </value>
                <value>
                    <fullName>XA15</fullName>
                </value>
                <value>
                    <fullName>XA16</fullName>
                </value>
                <value>
                    <fullName>XA17</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acupuncture_Other__c</fullName>
        <description>This field will display when user select  &quot;Acupuncture&quot; in picklist and value is &quot;Other&quot;.</description>
        <label>Acu Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acupuncture__c</fullName>
        <label>Acupuncture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA01</fullName>
                </value>
                <value>
                    <fullName>AA02</fullName>
                </value>
                <value>
                    <fullName>AA03</fullName>
                </value>
                <value>
                    <fullName>AA04</fullName>
                </value>
                <value>
                    <fullName>AA05</fullName>
                </value>
                <value>
                    <fullName>AA06</fullName>
                </value>
                <value>
                    <fullName>AA07</fullName>
                </value>
                <value>
                    <fullName>AA08</fullName>
                </value>
                <value>
                    <fullName>AA09</fullName>
                </value>
                <value>
                    <fullName>AA10</fullName>
                </value>
                <value>
                    <fullName>AA11</fullName>
                </value>
                <value>
                    <fullName>AA12</fullName>
                </value>
                <value>
                    <fullName>AA13</fullName>
                </value>
                <value>
                    <fullName>AA14</fullName>
                </value>
                <value>
                    <fullName>AA15</fullName>
                </value>
                <value>
                    <fullName>AA16</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chiropractic_Other__c</fullName>
        <description>This field will display when user select  &quot;Chiropractic&quot; in picklist and value is &quot;Other&quot;.</description>
        <label>Chiro Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chiropractic__c</fullName>
        <label>Chiropractic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA01</fullName>
                </value>
                <value>
                    <fullName>CA02</fullName>
                </value>
                <value>
                    <fullName>CA03</fullName>
                </value>
                <value>
                    <fullName>CA04</fullName>
                </value>
                <value>
                    <fullName>CA05</fullName>
                </value>
                <value>
                    <fullName>CA06</fullName>
                </value>
                <value>
                    <fullName>CA07</fullName>
                </value>
                <value>
                    <fullName>CA08</fullName>
                </value>
                <value>
                    <fullName>CA09</fullName>
                </value>
                <value>
                    <fullName>CA10</fullName>
                </value>
                <value>
                    <fullName>CA11</fullName>
                </value>
                <value>
                    <fullName>CA12</fullName>
                </value>
                <value>
                    <fullName>CA13</fullName>
                </value>
                <value>
                    <fullName>CA14</fullName>
                </value>
                <value>
                    <fullName>CA15</fullName>
                </value>
                <value>
                    <fullName>CA16</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomMedical_Other__c</fullName>
        <description>This field will display when user select  &quot;Custom/Medical&quot; in picklist and value is &quot;Other&quot;.</description>
        <label>CustMed Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Medical__c</fullName>
        <label>Custom/Medical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HE05</fullName>
                </value>
                <value>
                    <fullName>HE07</fullName>
                </value>
                <value>
                    <fullName>HE55</fullName>
                </value>
                <value>
                    <fullName>HE57</fullName>
                </value>
                <value>
                    <fullName>ML33</fullName>
                </value>
                <value>
                    <fullName>ML38</fullName>
                </value>
                <value>
                    <fullName>ML39</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Other__c</fullName>
        <description>This field will display when user select  &quot;Dental&quot; in picklist and value is &quot;Other&quot;.</description>
        <label>Dental Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <label>Dental</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DL01</fullName>
                </value>
                <value>
                    <fullName>DL02</fullName>
                </value>
                <value>
                    <fullName>DL03</fullName>
                </value>
                <value>
                    <fullName>DS01</fullName>
                </value>
                <value>
                    <fullName>DP01</fullName>
                </value>
                <value>
                    <fullName>DP02</fullName>
                </value>
                <value>
                    <fullName>DP03</fullName>
                </value>
                <value>
                    <fullName>DP04</fullName>
                </value>
                <value>
                    <fullName>DP05</fullName>
                </value>
                <value>
                    <fullName>DP06</fullName>
                </value>
                <value>
                    <fullName>DP07</fullName>
                </value>
                <value>
                    <fullName>DP08</fullName>
                </value>
                <value>
                    <fullName>DP09</fullName>
                </value>
                <value>
                    <fullName>DP10</fullName>
                </value>
                <value>
                    <fullName>DP11</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Early_Retiree__c</fullName>
        <label>EC (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <label>EC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE1__c</fullName>
        <label>EE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE2__c</fullName>
        <description>Req-3384</description>
        <label>EE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_1_Early_Retiree__c</fullName>
        <label>EE+1(Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_1__c</fullName>
        <label>EE+1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_2_Early_Retiree__c</fullName>
        <label>EE+2 (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_2__c</fullName>
        <label>EE+2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Early_Retiree1__c</fullName>
        <label>EE (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Early_Retiree2__c</fullName>
        <label>EE (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Early_Retiree__c</fullName>
        <label>EE (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE__c</fullName>
        <label>EE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Early_Retiree_Sec1__c</fullName>
        <description>Plan Name (Early Retiree)</description>
        <label>EF(Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Early_Retiree__c</fullName>
        <label>EF (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Sec1__c</fullName>
        <description>EF value for top section  &apos;Plan Name (Active)&apos;</description>
        <label>EF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF__c</fullName>
        <label>EF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Early_Retiree__c</fullName>
        <label>ES (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES__c</fullName>
        <label>ES</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndividualMedical_Other__c</fullName>
        <description>This field will display when user select  &quot;Individual/Medical&quot; in picklist and value is &quot;Other&quot;</description>
        <label>Ind/Med Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Medical__c</fullName>
        <label>Individual/Medical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum: MI01</fullName>
                </value>
                <value>
                    <fullName>Gold: MI02</fullName>
                </value>
                <value>
                    <fullName>Silver: MI03</fullName>
                </value>
                <value>
                    <fullName>Bronze: MI04</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infertility__c</fullName>
        <label>Infertility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IF50</fullName>
                </value>
                <value>
                    <fullName>IF20</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Large_GroupMedical_Other__c</fullName>
        <description>This field will display when user select  &quot;Large Group/Medical&quot; in picklist and value is &quot;Other&quot;</description>
        <label>Large Group Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_Group_Medical__c</fullName>
        <label>Large Group/Medical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HE01</fullName>
                </value>
                <value>
                    <fullName>HE02</fullName>
                </value>
                <value>
                    <fullName>HE03</fullName>
                </value>
                <value>
                    <fullName>HE04</fullName>
                </value>
                <value>
                    <fullName>HE06</fullName>
                </value>
                <value>
                    <fullName>HE51</fullName>
                </value>
                <value>
                    <fullName>HE52</fullName>
                </value>
                <value>
                    <fullName>HE53</fullName>
                </value>
                <value>
                    <fullName>HE54</fullName>
                </value>
                <value>
                    <fullName>HE56</fullName>
                </value>
                <value>
                    <fullName>HL01/HL51</fullName>
                </value>
                <value>
                    <fullName>HL02/HL52</fullName>
                </value>
                <value>
                    <fullName>HL03/HL53</fullName>
                </value>
                <value>
                    <fullName>HL04/HL54</fullName>
                </value>
                <value>
                    <fullName>HL06/HL56</fullName>
                </value>
                <value>
                    <fullName>ML01</fullName>
                </value>
                <value>
                    <fullName>ML02</fullName>
                </value>
                <value>
                    <fullName>ML03</fullName>
                </value>
                <value>
                    <fullName>ML04</fullName>
                </value>
                <value>
                    <fullName>ML05</fullName>
                </value>
                <value>
                    <fullName>ML06</fullName>
                </value>
                <value>
                    <fullName>ML07</fullName>
                </value>
                <value>
                    <fullName>ML08</fullName>
                </value>
                <value>
                    <fullName>ML09</fullName>
                </value>
                <value>
                    <fullName>ML10</fullName>
                </value>
                <value>
                    <fullName>ML11</fullName>
                </value>
                <value>
                    <fullName>ML12</fullName>
                </value>
                <value>
                    <fullName>ML13</fullName>
                </value>
                <value>
                    <fullName>ML14</fullName>
                </value>
                <value>
                    <fullName>ML15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Plan_Notes__c</fullName>
        <label>Medical Plan Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Plan ID</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze: HS03/HS53</fullName>
                </value>
                <value>
                    <fullName>Bronze: HS05/HS55</fullName>
                </value>
                <value>
                    <fullName>Bronze: MI04</fullName>
                </value>
                <value>
                    <fullName>Bronze: MS11</fullName>
                </value>
                <value>
                    <fullName>Bronze: MS16</fullName>
                </value>
                <value>
                    <fullName>Bronze: MS26</fullName>
                </value>
                <value>
                    <fullName>Bronze: SE05/SE55</fullName>
                </value>
                <value>
                    <fullName>Gold: MI02</fullName>
                </value>
                <value>
                    <fullName>Gold: MS02</fullName>
                </value>
                <value>
                    <fullName>Gold: MS06</fullName>
                </value>
                <value>
                    <fullName>Gold: MS07</fullName>
                </value>
                <value>
                    <fullName>Gold: MS12</fullName>
                </value>
                <value>
                    <fullName>Gold: MS13</fullName>
                </value>
                <value>
                    <fullName>Gold: MS17</fullName>
                </value>
                <value>
                    <fullName>Gold: MS22</fullName>
                </value>
                <value>
                    <fullName>Gold: MS23</fullName>
                </value>
                <value>
                    <fullName>Gold: MS27</fullName>
                </value>
                <value>
                    <fullName>HE01</fullName>
                </value>
                <value>
                    <fullName>HE02</fullName>
                </value>
                <value>
                    <fullName>HE03</fullName>
                </value>
                <value>
                    <fullName>HE04</fullName>
                </value>
                <value>
                    <fullName>HE06</fullName>
                </value>
                <value>
                    <fullName>HE01/HE51</fullName>
                </value>
                <value>
                    <fullName>HE02/HE52</fullName>
                </value>
                <value>
                    <fullName>HE03/HE53</fullName>
                </value>
                <value>
                    <fullName>HE04/HE54</fullName>
                </value>
                <value>
                    <fullName>HE05/HE55</fullName>
                </value>
                <value>
                    <fullName>HE06/HE56</fullName>
                </value>
                <value>
                    <fullName>HE51</fullName>
                </value>
                <value>
                    <fullName>HE52</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual/Medical</fullName>
                </value>
                <value>
                    <fullName>Small Group/Medical</fullName>
                </value>
                <value>
                    <fullName>Large Group/Medical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Medical_Benefit_Plan_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visible only for Renewal SCN</description>
        <label>No Medical Benefit Plan Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Optional_Benefit_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visible only for Renewal SCN</description>
        <label>No Optional Benefit Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Plan_Id__c</fullName>
        <description>Req 3268 -- Field to store other data of Plan Id</description>
        <label>Other Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Active_1__c</fullName>
        <label>Plan Name (Active)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Active_2__c</fullName>
        <description>Req-3384 creating a new section</description>
        <label>Plan Name (Active)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Active__c</fullName>
        <label>Plan Name (Active)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Early_Retiree_1__c</fullName>
        <label>Plan Name (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Early_Retiree_2__c</fullName>
        <label>Plan Name (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Early_Retiree__c</fullName>
        <label>Plan Name (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosthetic_Orthotic__c</fullName>
        <label>Prosthetic/Orthotic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OP20</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Small_GroupMedical_Other__c</fullName>
        <description>This field will display when user select  &quot;Group/Medical_Other&quot; in picklist and value is &quot;Other&quot;</description>
        <label>Small Group Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Group_Medical__c</fullName>
        <label>Small Group/Medical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum: MS03</fullName>
                </value>
                <value>
                    <fullName>Platinum: MS04</fullName>
                </value>
                <value>
                    <fullName>Platinum: MS05</fullName>
                </value>
                <value>
                    <fullName>Platinum: MS18</fullName>
                </value>
                <value>
                    <fullName>Platinum: MS19</fullName>
                </value>
                <value>
                    <fullName>Platinum: MS20</fullName>
                </value>
                <value>
                    <fullName>Gold: MS02</fullName>
                </value>
                <value>
                    <fullName>Gold: MS06</fullName>
                </value>
                <value>
                    <fullName>Gold: MS07</fullName>
                </value>
                <value>
                    <fullName>Gold: MS12</fullName>
                </value>
                <value>
                    <fullName>Gold: MS13</fullName>
                </value>
                <value>
                    <fullName>Gold: MS17</fullName>
                </value>
                <value>
                    <fullName>Silver: HS01/HS51</fullName>
                </value>
                <value>
                    <fullName>Silver: HS02/HS52</fullName>
                </value>
                <value>
                    <fullName>Silver: HS04/HS54</fullName>
                </value>
                <value>
                    <fullName>Silver: HS06/HS56</fullName>
                </value>
                <value>
                    <fullName>Silver: MS08</fullName>
                </value>
                <value>
                    <fullName>Silver: MS09</fullName>
                </value>
                <value>
                    <fullName>Silver: MS14</fullName>
                </value>
                <value>
                    <fullName>Silver: MS15</fullName>
                </value>
                <value>
                    <fullName>Bronze: HS03/HS53</fullName>
                </value>
                <value>
                    <fullName>Bronze: HS05/HS55</fullName>
                </value>
                <value>
                    <fullName>Bronze: MS11</fullName>
                </value>
                <value>
                    <fullName>Bronze: MS16</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_Case_Notification__c</fullName>
        <label>Sold Case Notification medical plan</label>
        <referenceTo>Employer_Group_Data__c</referenceTo>
        <relationshipLabel>Medical Plans</relationshipLabel>
        <relationshipName>Medical_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standard_Medical_Plan_Name__c</fullName>
        <label>Standard Medical Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Other__c</fullName>
        <description>This field will display when user select  &quot;Vision&quot; in picklist and value is &quot;Other&quot;.</description>
        <label>Vision Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VA01</fullName>
                </value>
                <value>
                    <fullName>VA02</fullName>
                </value>
                <value>
                    <fullName>VA03</fullName>
                </value>
                <value>
                    <fullName>VA09</fullName>
                </value>
                <value>
                    <fullName>VA10</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Medical Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Plan-{000000000}</displayFormat>
        <label>SFDC Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Plans</pluralLabel>
    <recordTypes>
        <fullName>Medical_Plan_Other</fullName>
        <active>true</active>
        <description>taking other medical plan</description>
        <label>Medical Plan Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_medical_plan</fullName>
        <active>true</active>
        <label>Standard medical plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Hyperlink</fullName>
        <active>true</active>
        <description>This validation will check and restrict if Hyper link has been added to Rich Text area</description>
        <errorConditionFormula>CONTAINS(Medical_Plan_Notes__c, &apos;&lt;a href&apos;)</errorConditionFormula>
        <errorMessage>Please do not add hyper link to Medical Plan Notes.</errorMessage>
    </validationRules>
</CustomObject>